--- a/package.json
+++ b/package.json
@@ -1,48 +1,52 @@
 {
-  "name": "pomodoist",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ryaan-web/pomodoist.git"
-  },
-  "keywords": [
-    "pomodoro",
-    "todo",
-    "to",
-    "do",
-    "todoist",
-    "pomodoist"
-  ],
-  "author": "aon n pprike",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ryaan-web/pomodoist/issues"
-  },
-  "homepage": "https://github.com/ryaan-web/pomodoist#readme",
-  "dependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "semantic-ui-react": "^0.88.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.5.3",
-    "html-webpack-plugin": "^4.3.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
-  }
+    "name": "pomodoist",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack-dev-server"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ryaan-web/pomodoist.git"
+    },
+    "keywords": [
+        "pomodoro",
+        "todo",
+        "to",
+        "do",
+        "todoist",
+        "pomodoist"
+    ],
+    "author": "aon n pprike",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ryaan-web/pomodoist/issues"
+    },
+    "homepage": "https://github.com/ryaan-web/pomodoist#readme",
+    "dependencies": {
+        "prop-types": "^15.7.2",
+        "react": "^16.13.1",
+        "react-delay-render": "^0.1.2",
+        "react-dom": "^16.13.1",
+        "react-imported-component": "^6.2.1",
+        "react-router-dom": "^5.1.2",
+        "semantic-ui-react": "^0.88.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.9.6",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/preset-env": "^7.9.6",
+        "@babel/preset-react": "^7.9.4",
+        "@hot-loader/react-dom": "^16.13.0",
+        "babel-loader": "^8.1.0",
+        "css-loader": "^3.5.3",
+        "html-webpack-plugin": "^4.3.0",
+        "react-hot-loader": "^4.12.21",
+        "style-loader": "^1.2.1",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.11.0"
+    }
 }
