--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server"
+        "dev": "webpack-dev-serve --config webpack.config.development.js",
+        "prebuild": "rimraf dist",
+        "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js"
     },
     "repository": {
         "type": "git",
@@ -40,10 +42,17 @@
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "@hot-loader/react-dom": "^16.13.0",
+        "autoprefixer": "^9.7.6",
         "babel-loader": "^8.1.0",
+        "cross-env": "^7.0.2",
         "css-loader": "^3.5.3",
+        "cssnano": "^4.1.10",
         "html-webpack-plugin": "^4.3.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "postcss-loader": "^3.0.0",
+        "postcss-preset-env": "^6.7.0",
         "react-hot-loader": "^4.12.21",
+        "rimraf": "^3.0.2",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
