--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "main": "index.js",
     "scripts": {
         "dev": "webpack-dev-server --env.env=dev",
+        "dev:bundleanalyzer": "yarn dev --env.addons=bundleanalyzer",
         "prebuild": "rimraf dist",
-        "build": "cross-env NODE_ENV=production webpack -p --env.env=prod"
+        "build": "cross-env NODE_ENV=production webpack -p --env.env=prod",
+        "build:bundleanalyzer": "yarn build --env.addons=bundleanalyzer"
     },
     "repository": {
         "type": "git",
@@ -32,6 +34,7 @@
         "react-delay-render": "^0.1.2",
         "react-dom": "^16.13.1",
         "react-imported-component": "^6.2.1",
+        "react-jss": "^10.1.1",
         "react-router-dom": "^5.1.2",
         "semantic-ui-react": "^0.88.2"
     },
@@ -56,6 +59,7 @@
         "rimraf": "^3.0.2",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
+        "webpack-bundle-analyzer": "^3.7.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^4.2.2"
