--- a/package.json
+++ b/package.json
@@ -31,13 +31,19 @@
     "dependencies": {
         "@material-ui/core": "^4.9.14",
         "@material-ui/icons": "^4.9.1",
+        "moment": "^2.25.3",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-delay-render": "^0.1.2",
+        "react-document-title": "^2.0.3",
         "react-dom": "^16.13.1",
         "react-imported-component": "^6.2.1",
         "react-jss": "^10.1.1",
-        "react-router-dom": "^5.1.2",
+        "react-redux": "^7.2.0",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5",
+        "redux-form": "^8.3.5",
+        "redux-saga": "^1.1.3",
         "semantic-ui-react": "^0.88.2"
     },
     "devDependencies": {
@@ -58,6 +64,7 @@
         "postcss-loader": "^3.0.0",
         "postcss-preset-env": "^6.7.0",
         "react-hot-loader": "^4.12.21",
+        "redux-devtools": "^3.5.0",
         "rimraf": "^3.0.2",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
