repo name in package json

--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "author": "aon n pprike",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/ryaan-web/pomodoist/issues"
+        "url": "https://github.com/ryaan-web/pomodist/issues"
     },
-    "homepage": "https://github.com/ryaan-web/pomodoist#readme",
+    "homepage": "https://github.com/ryaan-web/pomodist#readme",
     "dependencies": {
         "@material-ui/core": "^4.9.14",
         "@material-ui/icons": "^4.9.1",
