--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "dev:bundleanalyzer": "yarn dev --env.addons=bundleanalyzer",
         "prebuild": "rimraf dist",
         "build": "cross-env NODE_ENV=production webpack -p --env.env=prod",
-        "build:bundleanalyzer": "yarn build --env.addons=bundleanalyzer"
+        "build:bundleanalyzer": "yarn build --env.addons=bundleanalyzer",
+        "predeploy": "yarn build",
+        "deploy": "gh-pages -d dist"
     },
     "repository": {
         "type": "git",
