--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "cross-env": "^7.0.2",
         "css-loader": "^3.5.3",
         "cssnano": "^4.1.10",
+        "gh-pages": "^2.2.0",
         "html-webpack-plugin": "^4.3.0",
         "mini-css-extract-plugin": "^0.9.0",
         "postcss-loader": "^3.0.0",
